--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "ownerBot": "62xxxxxxx@c.us",
     "prefix": ".",
     "nao": "api-key",
-    "openAiKey": "api-key",
-    "authorStick": "@SlavyanDesu",
-    "packStick": "BocchiBot"
+    "openAiKey": "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",
+    "authorStick": "@MrRIAN",
+    "packStick": "MrRIAN"
 }
